fix header on mobile

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,11 +5,10 @@ header {
 }
 
 nav {
-	height:100%;
-	width:33.333333%;
+	width:40%;
 	float: right;
 	ul {
-		margin-top:15%;
+		margin: 47px 0 0;
 		font-size:1.6rem
 	}
 	ul li {
